KAFKA-20993 Remove hamcrest from org.apache.kafka.streams.processor.internals.assignment (#23291)
Migrate usages of hamcrest to junit

Reviewers: Chia-Ping Tsai <chia7712@gmail.com>, Ken Huang
<s7133700@gmail.com>